--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "backbone": "^1.3.3",
     "hyperagent": "^0.4.0",
     "mustache.js": "mustache#^2.3.0",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "urijs": "uri.js#^1.18.10"
   }
 }
